# EMPTY_PROJECT

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  LOAD_libOperatorManagerWrapper.cpp  LOAD_libOperatorManagerWrapper.h
src/: main.cpp
